--- a/Modules/BAPT_PivotTable.cls
+++ b/Modules/BAPT_PivotTable.cls
@@ -10,7 +10,7 @@ Attribute VB_Exposed = True
 '###############################################################################################
 '# Copyright (c) 2021 Thomas Möller                                                            #
 '# MIT License  => https://github.com/team-moeller/better-access-pivottable/blob/main/LICENSE  #
-'# Version 1.04.39  published: 30.11.2021                                                      #
+'# Version 1.05.04  published: 04.12.2021                                                      #
 '###############################################################################################
 
 Option Compare Database
@@ -59,6 +59,9 @@ Public Property Get DataSourceObjectName() As String
 End Property
 
 Public Property Let Columns(newValue As String)
+    newValue = "'" & newValue & "'"
+    newValue = Replace(newValue, ",", "','")
+    newValue = Replace(newValue, ",' ", ",'")
     m_Columns = newValue
 End Property
 Public Property Get Columns() As String
@@ -66,6 +69,9 @@ Public Property Get Columns() As String
 End Property
 
 Public Property Let Rows(newValue As String)
+    newValue = "'" & newValue & "'"
+    newValue = Replace(newValue, ",", "','")
+    newValue = Replace(newValue, ",' ", ",'")
     m_Rows = newValue
 End Property
 Public Property Get Rows() As String
