--- a/Modules/BAPT_StringBuilder.cls
+++ b/Modules/BAPT_StringBuilder.cls
@@ -2,7 +2,7 @@ VERSION 1.0 CLASS
 BEGIN
   MultiUse = -1  'True
 END
-Attribute VB_Name = "BAPT__Factory"
+Attribute VB_Name = "BAPT_StringBuilder"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
@@ -16,34 +16,22 @@ Attribute VB_Exposed = False
 Option Compare Database
 Option Explicit
 
-Private m_Helper  As BAPT_Helper
-Private m_Scripts As BAPT_Scripts
 
-Public Function PivotTable(Optional ByVal TheControl As WebBrowserControl) As BAPT_PivotTable
-  
-    Set PivotTable = New BAPT_PivotTable
-    PivotTable.Init TheControl
-    
-End Function
+Private m_String As String
 
-Friend Function Helper() As BAPT_Helper
-
-    Set Helper = m_Helper
-
-End Function
-
-Public Function Scripts() As BAPT_Scripts
-    
-    Set Scripts = m_Scripts
-
-End Function
-
-Private Sub Class_Initialize()
-    
-    Set m_Helper = New BAPT_Helper
-    Set m_Scripts = New BAPT_Scripts
-
+Public Sub Add(ByVal TheString As String)
+    m_String = m_String & TheString
 End Sub
 
+Public Sub AddLine(ByVal TheString As String)
+    m_String = m_String & TheString & vbCrLf
+End Sub
 
+Public Sub CutTrailingComma()
+    m_String = BAPT.Helper.CutTrailingComma(m_String)
+End Sub
+
+Public Function ToString() As String
+    ToString = m_String
+End Function
 
