--- a/Modules/BAPT_Rows.cls
+++ b/Modules/BAPT_Rows.cls
@@ -10,7 +10,7 @@ Attribute VB_Exposed = True
 '###############################################################################################
 '# Copyright (c) 2021 Thomas Möller                                                            #
 '# MIT License  => https://github.com/team-moeller/better-access-pivottable/blob/main/LICENSE  #
-'# Version 1.08.16  published: 11.12.2021                                                      #
+'# Version 1.09.10  published: 12.12.2021                                                      #
 '###############################################################################################
 
 Option Compare Database
@@ -20,6 +20,7 @@ Option Explicit
 '### Members
 
 Private m_Fields As String
+Private m_ShowTotals As Boolean
 
 
 '### Properties
@@ -33,4 +34,38 @@ End Property
 Public Property Get Fields() As String
     Fields = m_Fields
 End Property
+
+Public Property Let ShowTotals(newValue As Boolean)
+    m_ShowTotals = newValue
+End Property
+Public Property Get ShowTotals() As Boolean
+    ShowTotals = m_ShowTotals
+End Property
+
+
+'### Instanzing
+
+Private Sub Class_Initialize()
+    
+    'Set default values
+    Me.ShowTotals = True
+    
+End Sub
+
+Private Sub Class_Terminate()
+    ' Do Nothing
+End Sub
+
+
+' ### Public Functions
+
+
+' ### Generator Function
+
+Friend Function GetCssToHideTotals() As String
+
+    GetCssToHideTotals = "    <style>thead > tr > th.pvtTotalLabel, .rowTotal, .pvtGrandTotal { display: none; }</style>"
+
+End Function
+
 
