--- a/Modules/BAPT_JQueryUI.cls
+++ b/Modules/BAPT_JQueryUI.cls
@@ -8,9 +8,9 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
 '###############################################################################################
-'# Copyright (c) 2021 Thomas Möller                                                            #
+'# Copyright (c) 2021, 2022 Thomas Möller                                                      #
 '# MIT License  => https://github.com/team-moeller/better-access-pivottable/blob/main/LICENSE  #
-'# Version 1.12.09  published: 02.01.2022                                                      #
+'# Version 1.13.09  published: 02.01.2022                                                      #
 '###############################################################################################
 
 Option Compare Database
